// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifGrid/>  test should correctly display the component <GifGrid/> 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__flash animate__delay-1s"
  >
    Batman
  </h3>
  <p>
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`<GifGrid/>  test should show when loads images 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__flash animate__delay-1s"
  >
    Batman
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="avas"
      key="avas"
      title="A thing"
      url="https://localhost/cosa.png"
    />
  </div>
</Fragment>
`;
